feat: 아이콘 수정, SEO 개선

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/piano-favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="any" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#6667AB" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Metaverse Exhibition - Solace Piano Visualization with Three.js"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +25,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Solace - Liszt</title>
+    <title>Solace Piano Visualization | Metaverse Exhibition - Liszt</title>
+    <meta name="keywords" content="piano, visualization, three.js, audio visualization, liszt, solace, metaverse, exhibition, web audio, 3d" />
+    <meta name="author" content="Metaverse Exhibition" />
+    <meta property="og:title" content="Solace Piano Visualization | Metaverse Exhibition" />
+    <meta property="og:description" content="리스트의 Solace 피아노 연주를 3D 공간에서 시각화하는 몰입형 웹 경험. 실시간 오디오 분석과 파티클 애니메이션으로 음악에 더 깊이 몰입할 수 있습니다." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metaverse-exhibition.netlify.app/" />
+    <meta property="og:image" content="%PUBLIC_URL%/piano-favicon.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Solace Piano Visualization | Metaverse Exhibition" />
+    <meta name="twitter:description" content="리스트의 Solace 피아노 연주를 3D 공간에서 시각화하는 몰입형 웹 경험" />
   </head>
   <body>
     <noscript
